--- a/Mask_Classification_CNN.ipynb
+++ b/Mask_Classification_CNN.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -604,15 +604,15 @@
      "output_type": "stream",
      "text": [
       "training max 0.9803536534309387\n",
-      "testing mean 0.8148214364051819\n"
+      "testing mean 0.8495273204410777\n"
      ]
     }
    ],
    "source": [
     "from statistics import mean\n",
     "\n",
-    "print(\"training max\", max((history.history['accuracy'][14:])))\n",
-    "print(\"testing mean\", mean((history.history['val_accuracy'])))"
+    "print(\"training max\", max((history.history['accuracy'][8:])))\n",
+    "print(\"testing mean\", mean((history.history['val_accuracy'][8:])))"
    ]
   },
   {
